--- a/CHANGES
+++ b/CHANGES
@@ -14,7 +14,7 @@ Thanks!
 - Fix incorrect escaping of OPML export
 - Fix font preferences not working
 - Fix error on unread articles count with OpenReader feeds
-- Fix articles' list during feed refreshes when the current selection is a smart or group folder
+- Fix articles' list during feed refreshes when the current selection is a smart or group folder 
 
 3.1.7
 -----
@@ -116,7 +116,7 @@ Thanks!
 -----
 - More crash fixes
 - Fix Vienna forgetting current folder/feed after termination and relaunch
-- Restore mechanism required by some plugins, especially "Add to Safari reading list"
+- Restore mechanism required by some plugins, especially "Add to Safari reading list" 
 - Conversion to modern Ojective-C
 
 3.1.1
@@ -461,7 +461,7 @@ Bugfixes :
 ---------
 - Google Reader support ! Each feed can either be local (especially authenticated feeds, which are not handled by Google Reader), or hosted on Google Reader
 - 64 bit support
-- Full Screen support on macOS Lion and Mountain Lion
+- Full Screen support on Mac OSX Lion and Mountain Lion
 - Fixes running on Leopard and on PowerPC
 - Fixes feeds whose titles are XHTML or contain linefeeds/carriage returns
 - Fixes Atom feeds with relative links
@@ -482,7 +482,7 @@ Bugfixes :
 ----------
 - Added Ascending and Descending items to the View > Sort By menu.
 - Added support for ',' duplicating '<' and '.' duplicating '>' since they appear below them on many country's keyboard layouts and this helps avoid having to hit the shift key since most of the other keyboard shortcuts handle both upper and lower case.
-- Added a feature to load the web page corresponding to a feed article instead of the text from the RSS feed.
+- Added a feature to load the web page corresponding to a feed article instead of the text from the RSS feed. 
 - Added a checkbox to the InfoWindow for the feeds to turn this feature on and off.
 - Added a new class ProgressTextCell to draw a progress indicator while the web page is loading since this will no longer be instantaneous.
 - Added menu items for Use Current Style for Articles and Use Web Page for Articles to make the new web page article feature more discoverable.
@@ -498,7 +498,7 @@ Bugfixes :
 
 2.5.1.2502
 ----------
-- Fix issue where styles fail to render under macOS Lion.
+- Fix issue where styles fail to render under Mac OSX Lion.
 - Fix Share With Twitter plugin.
 
 2.5.0.2500
@@ -547,7 +547,7 @@ Bugfixes :
 - Fix "Help -> Keyboard shortcuts", which didn't work at all.
 - Numerous fixes to localization of help pages and other strings in German, French, and other languages.
 - General code and build-phase cleanup, as well as minor speed improvements for some operations.
-- Drop macOS 10.4 Tiger support. Vienna 2.4 needs 10.5 Leopard or greater to launch.
+- Drop Mac OS X 10.4 Tiger support. Vienna 2.4 needs 10.5 Leopard or greater to launch.
 - Prevent an infinite redirect loop. This was happening with http://feeds.feedburner.com/factcheck/Rdqt
 - Fix the article view scrolling problem reported at http://forums.cocoaforge.com/viewtopic.php?f=18&t=20814
 - Fix the mark all read bug on Snow Leopard reported at http://forums.cocoaforge.com/viewtopic.php?f=18&t=20877
@@ -576,7 +576,7 @@ Bugfixes :
 
 2.3.0.2301
 ----------
-- Drop macOS 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.
+- Drop Mac OS X 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.
 - Leopard fix: allow option-left-arrow and option-right-arrow as keyboard shortcuts for closing and opening group folders.
 - Bug fix: when validating a URL, escape any special query characters.
 - Fix assertion failure when the user enters an invalid URL string in the address bar.
@@ -587,7 +587,7 @@ Bugfixes :
 ----------
 WARNING: MAC OS X 10.3 PANTHER USERS SHOULD NOT DOWNLOAD THIS! IT WON'T RUN.
 
-- Drop macOS 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.
+- Drop Mac OS X 10.3 Panther support. Vienna 2.3 needs 10.4 or greater to launch.
 - Add folder ordering option (manually or by name).
 - Improvement to Send Link for multiple links and escaped characters. (Patch from Anmol Khirbat).
 - Change standard product URLs to the new www.vienna-rss.org web site.
@@ -1065,7 +1065,7 @@ WARNING: MAC OS X 10.3 PANTHER USERS SHOULD NOT DOWNLOAD THIS! IT WON'T RUN.
 - Font selection in Preferences changed to use the standard OS font picker.
 - Add an option to disable feed folder images in the folders list.
 - Moved unread count on application icon to the top right corner to be consistent with most
-  other macOS applications.
+  other Mac OSX applications.
 - Support dragging URL strings from other applications into the folders pane.
 - Support dropping script files (.scpt) on the application icon to install them to the Vienna
   script folder and add them to the Scripts menu.
@@ -1176,7 +1176,7 @@ WARNING: MAC OS X 10.3 PANTHER USERS SHOULD NOT DOWNLOAD THIS! IT WON'T RUN.
 2.0.0.2004
 ----------
 - Add Scripts menu that displays all scripts under ~/Library/Scripts/Applications/Vienna. By
-  default this is enabled under macOS 10.3 and disabled under 10.4 since there is a system
+  default this is enabled under Mac OSX 10.3 and disabled under 10.4 since there is a system
   wide Scripts menu on the status bar that replicates this functionality.
 - Rewrote the code that registers the default RSS reader. It wasn't picking up all possible
   candidates. Now it shows all candidate applications and also adds a Select... option so the
