--- a/Interfaces/da.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/da.lproj/GeneralPreferencesView.strings
@@ -32,10 +32,10 @@
 "JDV-ek-xja.title" = "Efter et kort øjeblik";
 
 /* Class = "NSButtonCell"; title = "Show in menu bar"; ObjectID = "JN6-lj-bQ1"; */
-"JN6-lj-bQ1.title" = "Show in menu bar";
+"JN6-lj-bQ1.title" = "Vis i menulinien";
 
 /* Class = "NSButtonCell"; title = "Search for latest Beta versions"; ObjectID = "OID-qF-Pp0"; */
-"OID-qF-Pp0.title" = "Search for latest Beta versions";
+"OID-qF-Pp0.title" = "Søg efter seneste betaudgaver";
 
 /* Class = "NSButtonCell"; title = "Open links in external browser"; ObjectID = "YoM-Gv-hXn"; */
 "YoM-Gv-hXn.title" = "Åben henvisninger i ekstern browser";
@@ -44,7 +44,7 @@
 "ewU-JH-fMC.title" = "Tjek for nye artikler:";
 
 /* Class = "NSTextFieldCell"; title = "Save downloaded files to:"; ObjectID = "geD-Ws-mQm"; */
-"geD-Ws-mQm.title" = "Gem hentede filer i:";
+"geD-Ws-mQm.title" = "Gem hentede arkiv i:";
 
 /* Class = "NSButtonCell"; title = "Bounce the application icon"; ObjectID = "gi4-ao-0yS"; */
 "gi4-ao-0yS.title" = "Hop programikonet";
@@ -59,7 +59,7 @@
 "kGA-Sa-RLG.title" = "Standard RSS Reader";
 
 /* Class = "NSButtonCell"; title = "Mark updated articles as new"; ObjectID = "meo-78-YOl"; */
-"meo-78-YOl.title" = "Mark updated articles as new";
+"meo-78-YOl.title" = "Marker opdaterede artikler som nye";
 
 /* Class = "NSMenuItem"; title = "Every 5 minutes"; ObjectID = "oVW-ee-uJT"; */
 "oVW-ee-uJT.title" = "Hver 5 minutter";
@@ -71,13 +71,11 @@
 "pjg-Ze-H3l.title" = "Åben nye henvisninger i baggrunden";
 
 /* Class = "NSTextFieldCell"; title = "Updates:"; ObjectID = "qeb-at-hYb"; */
-"qeb-at-hYb.title" = "Updates:";
-
-/* Class = "NSButtonCell"; title = "Include anonymous system profile"; ObjectID = "qno-Cg-EkC"; */
-"qno-Cg-EkC.title" = "Include anonymous system profile";
+"qeb-at-hYb.title" = "Opdateringer:";
 
 /* Class = "NSTextFieldCell"; title = "Mark current article read:"; ObjectID = "sCl-hz-PFF"; */
-"sCl-hz-PFF.title" = "Mark current article read:";
+"sCl-hz-PFF.title" = "Marker nuværende artikel læst:";
 
 /* Class = "NSMenuItem"; title = "Every hour"; ObjectID = "sSj-zI-6RY"; */
 "sSj-zI-6RY.title" = "Hver time";
+
