--- a/Interfaces/da.lproj/SyncingPreferencesView.strings
+++ b/Interfaces/da.lproj/SyncingPreferencesView.strings
@@ -1,11 +1,11 @@
 /* Class = "NSButton"; ibExternalAccessibilityDescription = "Visit the website"; ObjectID = "Ar5-Qc-YTe"; */
-"Ar5-Qc-YTe.ibExternalAccessibilityDescription" = "Visit the website";
+"Ar5-Qc-YTe.ibExternalAccessibilityDescription" = "Besøg hjemmesiden";
 
 /* Class = "NSButton"; ibShadowedToolTip = "Visit the website"; ObjectID = "Ar5-Qc-YTe"; */
-"Ar5-Qc-YTe.ibShadowedToolTip" = "Visit the website";
+"Ar5-Qc-YTe.ibShadowedToolTip" = "Besøg hjemmesiden";
 
 /* Class = "NSButtonCell"; title = "Sync with an Open Reader server"; ObjectID = "Lkv-md-rEW"; */
-"Lkv-md-rEW.title" = "Sync with an Open Reader server";
+"Lkv-md-rEW.title" = "Synkroniser med en Open Reader server";
 
 /* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "NKI-36-zCY"; */
 "NKI-36-zCY.title" = "Kodeord:";
@@ -13,20 +13,18 @@
 /* Class = "NSTextFieldCell"; title = "Login:"; ObjectID = "O2q-8o-CSb"; */
 "O2q-8o-CSb.title" = "Navn:";
 
-/* Class = "NSButtonCell"; title = "🌍"; ObjectID = "e0z-IA-uBQ"; */
-"e0z-IA-uBQ.title" = "🌍";
-
 /* Class = "NSTextField"; ibShadowedToolTip = "Select a server supporting the Open Reader API"; ObjectID = "kM0-7a-obO"; */
-"kM0-7a-obO.ibShadowedToolTip" = "Select a server supporting the Open Reader API";
+"kM0-7a-obO.ibShadowedToolTip" = "Vælg en server som understøtter Open Reader API'en";
 
 /* Class = "NSTextFieldCell"; title = "URL: https://"; ObjectID = "tec-2d-Xej"; */
-"tec-2d-Xej.title" = "URL: https://";
+"tec-2d-Xej.title" = "Henvisning: https://";
 
 /* Class = "NSTextFieldCell"; title = "Server:"; ObjectID = "uTl-XE-0ym"; */
 "uTl-XE-0ym.title" = "Server:";
 
 /* Class = "NSTextField"; ibShadowedToolTip = "Address of a server supporting the Open Reader API"; ObjectID = "vZE-Pl-S9H"; */
-"vZE-Pl-S9H.ibShadowedToolTip" = "Address of a server supporting the Open Reader API";
+"vZE-Pl-S9H.ibShadowedToolTip" = "Adresse på en server som understøtter Open Reader API'en";
 
 /* Class = "NSPopUpButton"; ibExternalAccessibilityDescription = "Select a server supporting the Open Reader API"; ObjectID = "zAy-oc-zmb"; */
-"zAy-oc-zmb.ibExternalAccessibilityDescription" = "Select a server supporting the Open Reader API";
+"zAy-oc-zmb.ibExternalAccessibilityDescription" = "Vælg en server som understøtter Open Reader API'en";
+
