--- a/Interfaces/de.lproj/InfoWindow.strings
+++ b/Interfaces/de.lproj/InfoWindow.strings
@@ -36,3 +36,7 @@
 
 /* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
 "xPF-M9-oZG.title" = "Abonnementadresse";
+
+/* Class = "NSButtonCell"; title = "Open Cached File…"; ObjectID = "xTj-hY-aTU"; */
+"xTj-hY-aTU.title" = "Cachedatei öffnen …";
+
