--- a/Interfaces/es.lproj/SyncingPreferencesView.strings
+++ b/Interfaces/es.lproj/SyncingPreferencesView.strings
@@ -1,5 +1,5 @@
 /* Class = "NSButton"; ibExternalAccessibilityDescription = "Visit the website"; ObjectID = "Ar5-Qc-YTe"; */
-"Ar5-Qc-YTe.ibExternalAccessibilityDescription" = "Visit the website";
+"Ar5-Qc-YTe.ibExternalAccessibilityDescription" = "Visitar página web";
 
 /* Class = "NSButton"; ibShadowedToolTip = "Visit the website"; ObjectID = "Ar5-Qc-YTe"; */
 "Ar5-Qc-YTe.ibShadowedToolTip" = "Visitar página web";
@@ -13,14 +13,8 @@
 /* Class = "NSTextFieldCell"; title = "Login:"; ObjectID = "O2q-8o-CSb"; */
 "O2q-8o-CSb.title" = "Usuario:";
 
-/* Class = "NSButtonCell"; title = "🌍"; ObjectID = "e0z-IA-uBQ"; */
-"e0z-IA-uBQ.title" = "🌍";
-
 /* Class = "NSTextField"; ibShadowedToolTip = "Select a server supporting the Open Reader API"; ObjectID = "kM0-7a-obO"; */
 "kM0-7a-obO.ibShadowedToolTip" = "Seleccione un servidor compatible con la API Open Reader";
-
-/* Class = "NSTextFieldCell"; title = "URL: https://"; ObjectID = "tec-2d-Xej"; */
-"tec-2d-Xej.title" = "URL: https://";
 
 /* Class = "NSTextFieldCell"; title = "Server:"; ObjectID = "uTl-XE-0ym"; */
 "uTl-XE-0ym.title" = "Servidor:";
@@ -29,4 +23,5 @@
 "vZE-Pl-S9H.ibShadowedToolTip" = "Dirección del servidor compatible con la API Open Reader";
 
 /* Class = "NSPopUpButton"; ibExternalAccessibilityDescription = "Select a server supporting the Open Reader API"; ObjectID = "zAy-oc-zmb"; */
-"zAy-oc-zmb.ibExternalAccessibilityDescription" = "Select a server supporting the Open Reader API";
+"zAy-oc-zmb.ibExternalAccessibilityDescription" = "Seleccione un servidor compatible con la API Open Reader";
+
