--- a/Interfaces/fr.lproj/InfoWindow.strings
+++ b/Interfaces/fr.lproj/InfoWindow.strings
@@ -36,3 +36,7 @@
 
 /* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
 "xPF-M9-oZG.title" = "URL du flux";
+
+/* Class = "NSButtonCell"; title = "Open Cached File…"; ObjectID = "xTj-hY-aTU"; */
+"xTj-hY-aTU.title" = "Ouvrir le fichier en cache…";
+
