Re-import Dutch translations

--- a/Interfaces/nl.lproj/InfoWindow.strings
+++ b/Interfaces/nl.lproj/InfoWindow.strings
@@ -36,3 +36,7 @@
 
 /* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
 "xPF-M9-oZG.title" = "URL van feed";
+
+/* Class = "NSButtonCell"; title = "Open Cached File…"; ObjectID = "xTj-hY-aTU"; */
+"xTj-hY-aTU.title" = "Open cachebestand…";
+
